--- a/index.htm
+++ b/index.htm
@@ -8,6 +8,21 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,1,0"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css"
+    />
+    <!--------------------------------------->
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js"
+    ></script>
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/auto-render.min.js"
+    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script defer src="main.js"></script>
     <title>CheapGPT</title>
   </head>
   <body>
@@ -28,10 +43,7 @@
           <span class="text">Explore GPTs</span>
         </div>
       </div>
-      <div class="chatsList">
-        <span class="title">chat#1</span>
-        <span class="title">chat#2</span>
-      </div>
+      <div class="chatsList"></div>
       <div class="accounts_Section"></div>
     </div>
     <div id="navBar">
@@ -57,6 +69,7 @@
         </div>
       </div>
     </div>
+
     <div id="chatArea" class="chatEmpty">
       <span id="emptyMsg">What can I help with?</span>
       <div class="wrapper"></div>
@@ -67,6 +80,5 @@
         arrow_upward
       </button>
     </div>
-    <script src="main.js"></script>
   </body>
 </html>
