--- a/index.htm
+++ b/index.htm
@@ -43,7 +43,10 @@
           <span class="text">Explore GPTs</span>
         </div>
       </div>
-      <div class="chatsList"></div>
+      <div class="chatsList">
+        <span class="title">chat#1</span>
+        <span class="title">chat#2</span>
+      </div>
       <div class="accounts_Section"></div>
     </div>
     <div id="navBar">
