--- a/index.htm
+++ b/index.htm
@@ -43,10 +43,7 @@
           <span class="text">Explore GPTs</span>
         </div>
       </div>
-      <div class="chatsList">
-        <span class="title">chat#1</span>
-        <span class="title">chat#2</span>
-      </div>
+      <div class="chatsList"></div>
       <div class="accounts_Section"></div>
     </div>
     <div id="navBar">
@@ -73,9 +70,9 @@
       </div>
     </div>
 
-    <div id="chatArea" class="chatEmpty">
+    <div id="chatArea">
       <span id="emptyMsg">What can I help with?</span>
-      <div class="wrapper"></div>
+      <div class="wrapper newChat"></div>
     </div>
     <div id="promptArea">
       <textarea id="prompt" placeholder="Ask anything"></textarea>
