--- a/index.htm
+++ b/index.htm
@@ -31,7 +31,7 @@
       <div class="section_1">
         <div class="newChatBtn material-symbols-rounded">edit_note</div>
       </div>
-      <div class="dummyBtns">
+      <div class="dummyBtns" onclick="alert('Thanks for clicking, but these buttons doesnt work!')">
         <div>
           <span class="img">
             <img src="./cheap.jpg" width="24px" />
